--- a/analysis_desc.ipynb
+++ b/analysis_desc.ipynb
@@ -15,6 +15,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First, import necessary libraries for importing data and whatever analysis follows\n",
+    "# will put these in a requirements file later\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import sklearn as sk\n",
+    "from sklearn import datasets\n",
+    "import matplotlib.pyplot as plt \n",
+    "from sklearn.preprocessing import LabelEncoder as le\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import seaborn as sns\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset that is fetched also contains metadata"
+    "The data that is fetched also contains metadata"
    ]
   },
   {
@@ -78,19 +96,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# lets take the data and save it to a variable called iris\n",
-    "iris_df = iris.data"
+    "iris = iris.data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 2: Initial exploration of dataset"
+    "# Step 2: Initial exploration of data package structure"
    ]
   },
   {
@@ -146,8 +164,349 @@
     }
    ],
    "source": [
-    "# print iris_df to see what it contains\n",
-    "print(iris_df)"
+    "# print iris to see what it contains\n",
+    "print(iris)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As shown above, when you load iris data it returns as a dictionary-like object which contains a list of features, a list of classes, and each instance of the dataset.\n",
+    "What do each of these elements represent?\n",
+    "- Each class represents a different species of iris\n",
+    "- Each feature represents a different measured aspect of the flowers\n",
+    "- Each instance represents a specific flower and the measurements of its features in centimeters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look at each of these below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     sepal length  sepal width  petal length  petal width\n",
+      "0             5.1          3.5           1.4          0.2\n",
+      "1             4.9          3.0           1.4          0.2\n",
+      "2             4.7          3.2           1.3          0.2\n",
+      "3             4.6          3.1           1.5          0.2\n",
+      "4             5.0          3.6           1.4          0.2\n",
+      "..            ...          ...           ...          ...\n",
+      "145           6.7          3.0           5.2          2.3\n",
+      "146           6.3          2.5           5.0          1.9\n",
+      "147           6.5          3.0           5.2          2.0\n",
+      "148           6.2          3.4           5.4          2.3\n",
+      "149           5.9          3.0           5.1          1.8\n",
+      "\n",
+      "[150 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# look at the features of the data. you can see the columns represent sepal length, sepal width, petal length, and petal width.\n",
+    "print(iris.features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              class\n",
+      "0       Iris-setosa\n",
+      "1       Iris-setosa\n",
+      "2       Iris-setosa\n",
+      "3       Iris-setosa\n",
+      "4       Iris-setosa\n",
+      "..              ...\n",
+      "145  Iris-virginica\n",
+      "146  Iris-virginica\n",
+      "147  Iris-virginica\n",
+      "148  Iris-virginica\n",
+      "149  Iris-virginica\n",
+      "\n",
+      "[150 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the targets are labels for the data. in this case, they are the species of iris flower (setosa, versicolor, virginica).\n",
+    "print(iris.targets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 3: Explore and summarise the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I would like to have both the targets and features in one dataframe to make my analysis and code easier. \n",
+    "# the code in x suggests putting the targets and features into x and y variables.\n",
+    "# data (as pandas dataframes) \n",
+    "X = iris.features \n",
+    "y = iris.targets "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# i then used these two variables to create a new dataframe called iris_df.\n",
+    "# we'll use the pandas function concat to do this. we'll specify we're joining on aixs=1, which means we're joining on the columns. \n",
+    "# see: https://pandas.pydata.org/docs/user_guide/merging.html#joining-logic-of-the-resulting-axis \n",
+    "iris_df = pd.concat([X, y], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's explore our new dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length</th>\n",
+       "      <th>sepal width</th>\n",
+       "      <th>petal length</th>\n",
+       "      <th>petal width</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal length  sepal width  petal length  petal width        class\n",
+       "0           5.1          3.5           1.4          0.2  Iris-setosa\n",
+       "1           4.9          3.0           1.4          0.2  Iris-setosa\n",
+       "2           4.7          3.2           1.3          0.2  Iris-setosa\n",
+       "3           4.6          3.1           1.5          0.2  Iris-setosa\n",
+       "4           5.0          3.6           1.4          0.2  Iris-setosa"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return top 5 rows\n",
+    "iris_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length</th>\n",
+       "      <th>sepal width</th>\n",
+       "      <th>petal length</th>\n",
+       "      <th>petal width</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sepal length  sepal width  petal length  petal width           class\n",
+       "145           6.7          3.0           5.2          2.3  Iris-virginica\n",
+       "146           6.3          2.5           5.0          1.9  Iris-virginica\n",
+       "147           6.5          3.0           5.2          2.0  Iris-virginica\n",
+       "148           6.2          3.4           5.4          2.3  Iris-virginica\n",
+       "149           5.9          3.0           5.1          1.8  Iris-virginica"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return bottom 5 rows\n",
+    "iris_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sepal length    float64\n",
+       "sepal width     float64\n",
+       "petal length    float64\n",
+       "petal width     float64\n",
+       "class            object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# double check the types of data in iris\n",
+    "iris_df.dtypes"
    ]
   }
  ],
