--- a/analysis_desc.ipynb
+++ b/analysis_desc.ipynb
@@ -286,12 +286,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# let's explore our new dataframe."
+    "# let's explore our new dataframe. we'll start looking at the top and bottom 5 rows to get a sense of what the data looks like."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -383,12 +383,13 @@
    ],
    "source": [
     "# return top 5 rows\n",
+    "# see: https://www.w3schools.com/python/pandas/ref_df_head.asp#:~:text=The%20head()%20method%20returns,a%20number%20is%20not%20specified.&text=Note%3A%20The%20column%20names%20will,addition%20to%20the%20specified%20rows.\n",
     "iris_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -479,13 +480,14 @@
     }
    ],
    "source": [
-    "# return bottom 5 rows\n",
+    "# return bottom 5 rows.\n",
+    "# https://www.w3schools.com/python/pandas/ref_df_tail.asp#:~:text=The%20tail()%20method%20returns,a%20number%20is%20not%20specified.\n",
     "iris_df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -505,8 +507,132 @@
     }
    ],
    "source": [
-    "# double check the types of data in iris\n",
+    "# double check the types of data in iris. we can see that each column is a float64 type, except for the target/class column.\n",
     "iris_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we will move on to summarizing the basic descriptive aspects of the dataset, which will tell us about the flowers themselves."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length</th>\n",
+       "      <th>sepal width</th>\n",
+       "      <th>petal length</th>\n",
+       "      <th>petal width</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5.843333</td>\n",
+       "      <td>3.054000</td>\n",
+       "      <td>3.758667</td>\n",
+       "      <td>1.198667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.828066</td>\n",
+       "      <td>0.433594</td>\n",
+       "      <td>1.764420</td>\n",
+       "      <td>0.763161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>4.300000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>1.600000</td>\n",
+       "      <td>0.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.800000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.350000</td>\n",
+       "      <td>1.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.400000</td>\n",
+       "      <td>3.300000</td>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>1.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.900000</td>\n",
+       "      <td>4.400000</td>\n",
+       "      <td>6.900000</td>\n",
+       "      <td>2.500000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       sepal length  sepal width  petal length  petal width\n",
+       "count    150.000000   150.000000    150.000000   150.000000\n",
+       "mean       5.843333     3.054000      3.758667     1.198667\n",
+       "std        0.828066     0.433594      1.764420     0.763161\n",
+       "min        4.300000     2.000000      1.000000     0.100000\n",
+       "25%        5.100000     2.800000      1.600000     0.300000\n",
+       "50%        5.800000     3.000000      4.350000     1.300000\n",
+       "75%        6.400000     3.300000      5.100000     1.800000\n",
+       "max        7.900000     4.400000      6.900000     2.500000"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Describe the data set. This will show basic descriptive statistics for each column in the dataframe.\n",
+    "# This includes the count, mean, standard deviation, min, max, and 25th, 50th, and 75th percentiles.\n",
+    "# see: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.describe.html \n",
+    "iris_df.describe()"
    ]
   }
  ],
